--- a/Code/buildYourWarung/buildYourWarung.html
+++ b/Code/buildYourWarung/buildYourWarung.html
@@ -275,6 +275,146 @@
                     </div>
                 </div>
             </div>
+            <div class="bundle">
+                <div class="sub2">
+                    <p class="subJudul2">Bundle</p>
+                    <div class="garis13"></div>
+                </div>
+                <div class="kategoriBundle">
+                    <div class="cardBundle">
+                        <div class="kiriBundle" style="background-image: url(../image/bgBundle.png);">
+                            <div class="isiKiriBundle" style="background-image: url(../image/bundle1.png);"></div>
+                        </div>
+                        <div class="tengahBundle">
+                            <div class="judulBundle">Bundle Kesehatan</div>
+                            <div class="deskripsiBundle">Deskripsi</div>
+                            <div class="isiBundle">
+                                <span style="font-weight:bold;">Isi Bundle Obat-obatan:</span><br>
+                                Antis - 50 pcs <br>
+                                Minyak angin - 120 pcs <br>
+                                Tolak angin - 200 pcs <br>
+                                Blackmores - 40 pcs <br>
+                                Vitacimin - 240 pcs <br>
+                                Betadine - 120 pcs <br>
+                                Diapet - 200 pcs <br>
+                                Adem sari - 200 pcs
+                            </div>
+                        </div>
+                        <div class="kananBundle">
+                            <p class="harga11">Rp8.000.000</p>
+                            <div class="kotakJumlah">
+                                <div class="kotakMin">-</div>
+                                <div class="kotakAngka">
+                                    <form action="" method="post">
+                                        <input type="text" name="qtyBeli" class="inputText qtyBeli" value="1">
+                                    </form>
+                                </div>
+                                <div class="kotakTambah">+</div>
+                            </div>
+                            <div class="beliCard3">BELI SEKARANG!</div>
+                        </div>
+                    </div>
+                    <div class="cardBundle">
+                        <div class="kiriBundle" style="background-image: url(../image/bgBundle.png);">
+                            <div class="isiKiriBundle" style="background-image: url(../image/bundle2.png);"></div>
+                        </div>
+                        <div class="tengahBundle">
+                            <div class="judulBundle">Bundle Cemilan</div>
+                            <div class="deskripsiBundle">Deskripsi</div>
+                            <div class="isiBundle">
+                                <span style="font-weight:bold;">Isi Bundle Cemilan:</span><br>
+                                Kusuka - 50 pcs <br>
+                                Chitato - 50 pcs <br>
+                                Cimory - 60 pcs <br>
+                                Freshtea - 60 pcs <br>
+                                Oreo - 120 pcs <br>
+                                Tango - 80 pcs <br>
+                                Rebo - 60 pcs <br>
+                                Pocky - 50 pcs
+                            </div>
+                        </div>
+                        <div class="kananBundle">
+                            <p class="harga11">Rp8.000.000</p>
+                            <div class="kotakJumlah">
+                                <div class="kotakMin">-</div>
+                                <div class="kotakAngka">
+                                    <form action="" method="post">
+                                        <input type="text" name="qtyBeli" class="inputText qtyBeli" value="1">
+                                    </form>
+                                </div>
+                                <div class="kotakTambah">+</div>
+                            </div>
+                            <div class="beliCard3">BELI SEKARANG!</div>
+                        </div>
+                    </div>
+                    <div class="cardBundle">
+                        <div class="kiriBundle" style="background-image: url(../image/bgBundle.png);">
+                            <div class="isiKiriBundle" style="background-image: url(../image/bundle3.png);"></div>
+                        </div>
+                        <div class="tengahBundle">
+                            <div class="judulBundle">Bundle Kebutuhan RT</div>
+                            <div class="deskripsiBundle">Deskripsi</div>
+                            <div class="isiBundle">
+                                <span style="font-weight:bold;">Isi Bundle Kebutuhan RT:</span><br>
+                                Pepsodent - 50 pcs <br>
+                                Biore - 60 pcs <br>
+                                Sunlight - 120 pcs <br>
+                                MamyPoko - 50 pcs <br>
+                                Rinso - 60 pcs <br>
+                                Indomie - 200 pcs <br>
+                                Kapal Api - 200 pcs <br>
+                                Wipol - 80 pcs
+                            </div>
+                        </div>
+                        <div class="kananBundle">
+                            <p class="harga11">Rp8.000.000</p>
+                            <div class="kotakJumlah">
+                                <div class="kotakMin">-</div>
+                                <div class="kotakAngka">
+                                    <form action="" method="post">
+                                        <input type="text" name="qtyBeli" class="inputText qtyBeli" value="1">
+                                    </form>
+                                </div>
+                                <div class="kotakTambah">+</div>
+                            </div>
+                            <div class="beliCard3">BELI SEKARANG!</div>
+                        </div>
+                    </div>
+                    <div class="cardBundle">
+                        <div class="kiriBundle" style="background-image: url(../image/bgBundle.png);">
+                            <div class="isiKiriBundle" style="background-image: url(../image/bundle4.png);"></div>
+                        </div>
+                        <div class="tengahBundle">
+                            <div class="judulBundle">Bundle Alat Tulis</div>
+                            <div class="deskripsiBundle">Deskripsi</div>
+                            <div class="isiBundle">
+                                <span style="font-weight:bold;">Isi Bundle Alat Tulis:</span><br>
+                                Pena - 240 pcs <br>
+                                Pensil - 240 pcs <br>
+                                Penggaris - 120 pcs <br>
+                                Penghapus - 240 pcs <br>
+                                Stapler - 120 pcs <br>
+                                Stipo - 240 pcs <br>
+                                Busur - 120 pcs <br>
+                                Peruncing - 120 pcs
+                            </div>
+                        </div>
+                        <div class="kananBundle">
+                            <p class="harga11">Rp8.000.000</p>
+                            <div class="kotakJumlah">
+                                <div class="kotakMin">-</div>
+                                <div class="kotakAngka">
+                                    <form action="" method="post">
+                                        <input type="text" name="qtyBeli" class="inputText qtyBeli" value="1">
+                                    </form>
+                                </div>
+                                <div class="kotakTambah">+</div>
+                            </div>
+                            <div class="beliCard3">BELI SEKARANG!</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
